Fix text alignment here

--- a/css/comp_extra.scss
+++ b/css/comp_extra.scss
@@ -52,6 +52,10 @@
 
 	#per-team-details {
 		text-align: center;
+
+		p {
+			text-align: initial;
+		}
 	}
 
 	div.matches {
